Rotate pdf figures with wrong orientations.

--- a/numu_CC_inclusive/GENIE_systematics/instructions/genie_multiverse_cafana_class.tex
+++ b/numu_CC_inclusive/GENIE_systematics/instructions/genie_multiverse_cafana_class.tex
@@ -208,14 +208,14 @@ After the spectrum and the error band of each single knob is obtained, the width
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=\textwidth]{figures/t_cos.pdf}
+  \includegraphics[angle=-90,origin=c, width=\textwidth]{figures/t_cos.pdf}
   \caption{Single knob effect for the muon truth angle.}
   \label{fig:true_mu_ang}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=\textwidth]{figures/t_muke.pdf}
+  \includegraphics[angle=-90,origin=c, width=\textwidth]{figures/t_muke.pdf}
   \caption{Single knob effect for the muon truth kinetic energy.}
   \label{fig:true_mu_ke}
 \end{figure}
@@ -232,7 +232,7 @@ Figure~\ref{fig:error_muke_all} and Figure~\ref{fig:error_muke_selected} show th
 \end{figure}
 \begin{figure}[h]
   \centering
-  \includegraphics[width=.9\textwidth]{figures/t_muke_ratio.pdf}
+  \includegraphics[angle=-90,origin=c, width=.9\textwidth]{figures/t_muke_ratio.pdf}
   \caption{Ratio of the all-knob-enabled spectrum and partially enabled one for up and down shifts for muon kinetic energy.}
   \label{fig:ratio_muke}
 \end{figure}
@@ -247,7 +247,7 @@ Figure~\ref{fig:error_muke_all} and Figure~\ref{fig:error_muke_selected} show th
 \end{figure}
 \begin{figure}[h]
   \centering
-  \includegraphics[width=.9\textwidth]{figures/t_cos_ratio.pdf}
+  \includegraphics[angle=-90,origin=c, width=.9\textwidth]{figures/t_cos_ratio.pdf}
   \caption{Ratio of the all-knob-enabled spectrum and partially enabled one for up and down shifts for muon $\cos\theta$.}
   \label{fig:ratio_muang}
 \end{figure}
